--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.58.2",
-    "@techstark/opencv-js": "^4.12.0-release.1"
+    "@techstark/opencv-js": "^4.12.0-release.1",
+    "@vitest/ui": "^4.0.18",
+    "vitest": "^4.0.18"
   }
 }
