--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@playwright/test": "^1.58.2",
     "@techstark/opencv-js": "^4.12.0-release.1",
     "@vitest/ui": "^4.0.18",
+    "happy-dom": "^20.7.0",
+    "jsdom": "^22.1.0",
     "vitest": "^4.0.18"
   }
 }
